Fix profile text contrast (desktop)

--- a/alien-night-theme-desktop.css
+++ b/alien-night-theme-desktop.css
@@ -2,9 +2,10 @@
 Alien Night Theme (Desktop) - A Dark Theme for Discourse
 Author: Ignaz Biegler
 Github: https://github.com/B-iggy/discourse-dark-theme
-Version 1.1
+Version 1.1.1
 */
-body {
+body,
+.user-main .user-content {
     background-color: #10161d;
 }
 
@@ -32,7 +33,13 @@ nav.post-controls button.create,
 .content-list ul li a,
 .topic-map .map .number, .topic-map .map i,
 .topic-map h3,
-.topic-map .buttons .btn:hover {
+.topic-map .buttons .btn:hover,
+.user-preferences .static,
+.d-editor-button-bar button,
+.category-list-item h3 a[href],
+.category-list-item>footer figure,
+.user-preferences .static,
+.d-editor-button-bar button {
     color: #fff;
 }
 
@@ -59,7 +66,7 @@ div.poll .poll-info {
 }
 
 .timeline-container .topic-timeline .timeline-handle,
- div.poll .results .bar {
+div.poll .results .bar {
     background-color: #019245;
 }
 
